Removed obsolete and old implementations Task #3 - Remove Obolete code/implementations